--- a/src/Driver/DriverCore/MakeFile
+++ b/src/Driver/DriverCore/MakeFile
@@ -1,8 +1,10 @@
 #Build DLL in DriverApp/bin/$(IntDir)
-SRC = src/DriverCore.cpp
-OUT = ../DriverApp/bin/DriverCore.dll
+SRC  = src\DriverCore.cpp
+OUT  = bin\DriverCore.dll
 
 all: $(SRC)
-
+	@echo Use "nmake DLL" to compile DLL
 DLL: $(SRC)
-	cl.exe /D_WINDLL /D_AFXDLL /D_AFEXT $(SRC) /MD /link /DLL /OUT:$(OUT)
+	@echo Compiling DLL from $(SRC) 
+	"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29333\bin\HostX64\x86\cl.exe" /w $(SRC) /EHsc /link /DLL /MACHINE:X86 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
+	@echo DLL compiled into $(OUT)
