--- a/src/Driver/DriverCore/MakeFile
+++ b/src/Driver/DriverCore/MakeFile
@@ -8,9 +8,9 @@ HELP:
 	@echo Use "nmake DLL_<x64, x86>"
 DLL_x64: $(SRC)
 	@echo Compiling DLL from $(SRC) 
-	"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29333\bin\HostX64\x64\cl.exe" /w $(SRC) /EHsc /link /DLL /MACHINE:X64 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
+	cl.exe /w $(SRC) /EHsc /link /DLL /MACHINE:X64 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
 	@echo DLL compiled into $(OUT)
 DLL_x86: $(SRC)
 	@echo Compiling DLL from $(SRC) 
-	"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29333\bin\HostX64\x86\cl.exe" /w $(SRC) /EHsc /link /DLL /MACHINE:X86 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
+	cl.exe /w $(SRC) /EHsc /link /DLL /MACHINE:X86 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
 	@echo DLL compiled into $(OUT)
