--- a/src/Driver/DriverCore/MakeFile
+++ b/src/Driver/DriverCore/MakeFile
@@ -2,10 +2,8 @@
 SRC  = src\DriverCore.cpp
 OUT  = bin\DriverCore.dll
 
-all: HELP
+all: DLL_x86
 
-HELP:
-	@echo Use "nmake DLL_<x64, x86>"
 DLL_x64: $(SRC)
 	@echo Compiling DLL from $(SRC) 
 	cl.exe /w $(SRC) /EHsc /link /DLL /MACHINE:X64 /SUBSYSTEM:WINDOWS /OUT:$(OUT)
